# rusty-url

./: .gitattributes  Cargo.toml  README.md
src/: main.rs  uuid.rs
static/: index.html
