[package]
name = "rusty-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schemars = "0.8.11"
okapi = "0.7.0-rc.1"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = "1.0.152"